# BlackCurtain

./: .gitignore  Cargo.toml  README.md  build_appdir.sh  build_appimage.sh
data/: barafu-black-curtain.appdata.xml  barafu-black-curtain.desktop.template
src/: integration.rs  main.rs
