[package]
name = "black_curtain"
version = "1.1.0"
edition = "2024"
repository = "https://github.com/Barafu/black-curtain"
publish = false
license = "MIT"
description = "A GUI app to dim a specific monitor"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
anyhow = "1.0"
directories = "6.0.0"

[profile.release]
strip = true #Remove extra symbols
opt-level = "s" #Optimize for size
lto = true #Enable linker optimizations
codegen-units=1 #Maximise optimizations

[profile.dev]
panic = "unwind"  # This ensures backtraces work
